--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,13 @@
             "Iskenderov\\Procedure\\": "src/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Iskenderov\\Procedure\\ProcedureServiceProvider"
+            ]
+        }
+    },
     "authors": [
         {
             "name": "Iskenderov",
