--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "psr-4": {
             "Iskenderov\\Procedure\\": "src/"
         }
-    },    
+    },
     "authors": [
         {
             "name": "Iskenderov",
@@ -19,6 +19,9 @@
         "php": "^8.1"
     },
     "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        },
         "laravel": {
             "providers": [
                 "Iskenderov\\Procedure\\ProcedureServiceProvider"
